# Async-Image-Task-with-Credit-Billing

./: Readme.md  dump.rdb  implink.txt
backend/: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  dump.rdb  fly.toml  init.sql  pyproject.toml  requirements.txt  setup.py  setup_database.py
backend/alembic/: env.py
backend/alembic/versions/: 32950a46f6c7_initial_migration_with_users_tasks_and_.py  4b9c1245fa24_fix_task_model_columns.py  ae210956d3ac_rename_task_metadata_to_processing_.py  c6d5127fad58_add_token_management_and_security_tables.py  ce40322695c2_create_webhook_events_table.py
backend/app/: celery_app.py  config.py  config.txt  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  payment.py  task.py  token.py  user.py  webhook_event.py
backend/app/routes/: admin.py  auth.py  auth_new.py  credits.py  tasks.py
backend/app/schemas/: payment.py  task.py  user.py
backend/app/services/: cleanup_service.py  payment_service.py  task_service.py  token_service.py  user_service.py
backend/app/tasks/: security_tasks.py
backend/app/utils/: auth.py  client_info.py  cookie_security.py  cookies.py  database_setup.py  file_handler.py  rate_limiting.py  razorpay_utils.py  redis_utils.py  security.py
backend/app/workers/: __init__.py  image_processor.py
backend/docs/: APIDocs.md  Deploy.md  Secuirty.md
backend/tests/: conftest.py  create_admin.py  test_admin.py  test_auth.py  test_credits.py  test_tasks.py  test_utils.py
frontend/: README.md  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json  sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/__tests__/: page.test.tsx
frontend/src/app/admin/: loading.tsx  page.tsx
frontend/src/app/api/health/: route.ts
frontend/src/app/dashboard/: loading.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: Accessibility.tsx  CreditPurchase.tsx  ErrorBoundary.tsx  Header.tsx  ImageUpload.tsx  OptimizedImage.tsx  SkipLink.tsx  TaskList.tsx
frontend/src/components/__tests__/: ErrorBoundary.test.tsx  Header.test.tsx
frontend/src/components/security/: SecurityDashboard.tsx
frontend/src/components/ui/: skeleton.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/contexts/__tests__/: AuthContext.test.tsx
frontend/src/hooks/: useApi.ts  useTaskUpdates.ts
frontend/src/lib/: api.ts
frontend/src/lib/api/: admin.ts  auth.ts  credits.ts  tasks.ts
frontend/src/types/: api.ts
